examples/test/testpolicy7838.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7838
  namespace: namespace354
spec:
  podSelector:
    matchLabels:
      key41: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value38
      podSelector:
        matchLabels:
          key45: value9
          key11: value0
          key35: value22
